--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#" class="current">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="/">Events</a></li>
+                    <li><a href="events.html">Events</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,3 +36,65 @@
                 Sollicitudin nibh sit amet commodo nulla.
             </p>
         </header>
+
+        <main>
+            <h2>James W. “Jess” Johnson</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Id aliquet lectus proin nibh nisl condimentum id venenatis. 
+                Tincidunt lobortis feugiat vivamus at augue eget arcu. Odio eu feugiat pretium nibh ipsum 
+                consequat nisl vel pretium. Phasellus vestibulum lorem sed risus ultricies tristique nulla 
+                aliquet. Enim nulla aliquet porttitor lacus luctus accumsan. Tortor posuere ac ut consequat 
+                semper viverra nam libero justo. Enim nulla aliquet porttitor lacus luctus accumsan tortor 
+                posuere ac. Dui nunc mattis enim ut tellus elementum. Nisl tincidunt eget nullam non nisi 
+                est sit amet. Id donec ultrices tincidunt arcu non sodales neque sodales. Suspendisse sed 
+                nisi lacus sed.
+            </p>
+            <p>
+                Odio facilisis mauris sit amet massa vitae. Nisl nisi scelerisque eu ultrices vitae auctor 
+                eu augue ut. Orci a scelerisque purus semper eget. Facilisi nullam vehicula ipsum a arcu 
+                cursus. Tincidunt augue interdum velit euismod in. Enim lobortis scelerisque fermentum 
+                dui. Lorem ipsum dolor sit amet. Felis imperdiet proin fermentum leo vel orci. Dui faucibus 
+                in ornare quam viverra orci sagittis eu. Eget egestas purus viverra accumsan in nisl nisi.
+            </p>
+            <h2>PTSD Support Therapy</h2>
+            <p>
+                In nibh mauris cursus mattis. Nunc aliquet bibendum enim facilisis gravida neque. Et 
+                ligula ullamcorper malesuada proin libero. Amet mattis vulputate enim nulla aliquet 
+                porttitor lacus luctus. Enim nunc faucibus a pellentesque. Viverra adipiscing at in tellus 
+                integer feugiat scelerisque. Metus vulputate eu scelerisque felis imperdiet proin. Leo a diam 
+                sollicitudin tempor id eu nisl nunc. Id eu nisl nunc mi ipsum faucibus vitae aliquet. Cursus 
+                risus at ultrices mi tempus imperdiet nulla. Etiam non quam lacus suspendisse faucibus interdum. 
+                Convallis a cras semper auctor. Ultricies tristique nulla aliquet enim tortor at. Lacus sed 
+                turpis tincidunt id aliquet risus feugiat. Elementum nibh tellus molestie nunc non blandit. Quis 
+                viverra nibh cras pulvinar mattis nunc sed blandit. Pharetra magna ac placerat vestibulum lectus 
+                mauris ultrices eros in. Vitae tempus quam pellentesque nec nam aliquam sem.
+            </p>
+            <h2>Project Phoenix Ranch</h2>
+            <p>
+                Tincidunt lobortis feugiat vivamus at augue eget. Sit amet venenatis urna cursus eget nunc 
+                scelerisque viverra. Eget aliquet nibh praesent tristique magna. Aliquam purus sit amet luctus. 
+                Est velit egestas dui id ornare. Massa sapien faucibus et molestie ac feugiat sed. Eu mi bibendum 
+                neque egestas congue quisque egestas. Cursus metus aliquam eleifend mi in nulla posuere. Ipsum 
+                dolor sit amet consectetur adipiscing elit pellentesque. Laoreet non curabitur gravida arcu ac 
+                tortor dignissim. Nec ullamcorper sit amet risus nullam eget. Volutpat blandit aliquam etiam erat 
+                velit scelerisque in dictum non. Proin sagittis nisl rhoncus mattis rhoncus urna. Ut enim blandit 
+                volutpat maecenas volutpat blandit. Odio facilisis mauris sit amet massa vitae tortor condimentum 
+                lacinia. Eget nunc lobortis mattis aliquam faucibus purus in massa tempor. Morbi tincidunt ornare 
+                massa eget egestas. Egestas dui id ornare arcu odio.
+            </p>
+            <h2>HR No 2866</h2>
+            <p>
+                Proin nibh nisl condimentum id venenatis a condimentum. Sit amet facilisis magna etiam tempor orci 
+                eu lobortis. Tempor id eu nisl nunc mi ipsum. Consequat semper viverra nam libero. Vehicula ipsum a 
+                arcu cursus vitae congue mauris rhoncus. At risus viverra adipiscing at in. Fermentum et sollicitudin 
+                ac orci phasellus egestas tellus rutrum tellus. Pellentesque dignissim enim sit amet venenatis urna 
+                cursus eget. Pretium lectus quam id leo in vitae. Volutpat maecenas volutpat blandit aliquam etiam erat 
+                velit. Viverra accumsan in nisl nisi scelerisque eu ultrices. Tincidunt arcu non sodales neque sodales. 
+                Arcu cursus vitae congue mauris rhoncus aenean.
+            </p>
+        </main>
+
+<script src="./js/script.js" async defer></script>
+</body>
+</html>
