--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#" class="current">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="/">Events</a></li>
+                    <li><a href="events.html">Events</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,7 +36,43 @@
                 Sollicitudin nibh sit amet commodo nulla.
             </p>
         </header>
-
+        <main>
+            <h2>Our Mission</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Sit amet cursus sit amet dictum. Risus viverra adipiscing at 
+                in tellus integer feugiat scelerisque varius. In ante metus dictum at. Felis eget nunc 
+                lobortis mattis aliquam. Eget sit amet tellus cras adipiscing enim. Mauris in aliquam sem 
+                fringilla ut morbi tincidunt. Odio eu feugiat pretium nibh ipsum. Dis parturient montes 
+                nascetur ridiculus mus mauris vitae ultricies. Ultrices tincidunt arcu non sodales. Netus 
+                et malesuada fames ac turpis egestas integer eget aliquet. Ante in nibh mauris cursus. Gravida 
+                dictum fusce ut placerat orci nulla pellentesque dignissim. Eget arcu dictum varius duis at 
+                consectetur lorem. Sit amet nulla facilisi morbi tempus. Pretium lectus quam id leo in. Etiam 
+                non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Sit amet nulla facilisi morbi 
+                tempus iaculis.
+            </p>
+            <p>
+                A iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Interdum velit laoreet 
+                id donec ultrices. Dictum sit amet justo donec. Consectetur adipiscing elit pellentesque 
+                habitant. Lobortis mattis aliquam faucibus purus in massa tempor nec. Morbi tincidunt ornare 
+                massa eget egestas purus. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor 
+                aliquam nulla. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. At erat 
+                pellentesque adipiscing commodo elit at imperdiet dui accumsan. Purus in mollis nunc sed 
+                id semper risus in hendrerit. Diam quam nulla porttitor massa. Lorem donec massa sapien 
+                faucibus et molestie ac. Risus sed vulputate odio ut. Augue neque gravida in fermentum et. 
+                Nibh nisl condimentum id venenatis a condimentum vitae. Varius morbi enim nunc faucibus a 
+                pellentesque sit amet porttitor. Ac tortor dignissim convallis aenean et tortor.
+            </p>
+            <h2>Our Partners</h2>
+            <p>
+                Eget sit amet tellus cras adipiscing enim. Mauris in aliquam sem fringilla ut morbi 
+                tincidunt. Odio eu feugiat pretium nibh ipsum. Dis parturient montes nascetur ridiculus 
+                mus mauris vitae ultricies. Ultrices tincidunt arcu non sodales. Netus et malesuada 
+                fames ac turpis egestas integer eget aliquet. Ante in nibh mauris cursus. Gravida 
+                dictum fusce ut placerat orci nulla pellentesque dignissim. Eget arcu dictum varius 
+                duis at consectetur lorem. 
+            </p>
+        </main>
         
         <script src="./js/script.js" async defer></script>
     </body>
