Minor edit on .col adjustment for mobile devices

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
         <div class="container mb-5 py-5">
             <div class="row align-items-center">
-                <div id="participate-block" class="col py-5 bg-block">
+                <div id="participate-block" class="col-sm py-5 bg-block">
                     <h2>Ways to participate</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex.</p>
                 </div>
-                <div id="volunteer-block" class="col py-5">
+                <div id="volunteer-block" class="col-sm py-5">
                     <h2>Volunteer</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna.</p>
                     <p class="text-right">Learn more &nbsp; &gt;</p>
@@ -70,12 +70,12 @@
 
         <div class="container my-5 py-5">
             <div class="row align-items-center">
-                <div id="events-block" class="col py-5 bg-block">
+                <div id="events-block" class="col-sm py-5 bg-block">
                     <h2>Events</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna.</p>
                     <p class="text-right">View all &nbsp; &gt;</p>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                     <img src="./src/img/photo-1464660756002-dd9f9a92b01b.jpeg" class="img-fluid" alt="American flag with a backdrop of sunrays peaking through a cloudy sky">
                 </div>
             </div>
