Worked on form page, no functionality yet

--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="form.html">Contact</a>
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
         </div>
@@ -42,50 +42,75 @@
         </div>
     </div>
 
-    <main class="mx-auto">
-        <div id="mission-statement" class="container mt-5 py-5">
-            <h1>Helping Veterans since 1994.</h1>
-            <p>We are a non-profit organization assisting disabled and homeless veterans in transitional care at VA hospitals and providing veteran support initiatives by building and managing practical life-skills.</p>
-        </div>
-
-        <div class="container mb-5 py-5">
-            <div class="row align-items-center">
-                <div id="participate-block" class="col-sm py-5 bg-block">
-                    <h2>Ways to participate</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex.</p>
-                </div>
-                <div id="volunteer-block" class="col-sm py-5">
-                    <h2>Volunteer</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna.</p>
-                    <p class="text-right">Learn more &nbsp; &gt;</p>
-                </div>
+    <main class='mx-auto'>
+        <div class="signup-sponsor-block">
+            <div class="container mt-5 py-5">
+                <h3 style="text-align: center;">Sign up to Volunteer or register as a Sponsor.</h1>
+                <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
+                    laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex. Sed
+                    faucibus leo nec posuere vestibulum. Aenean eu tortor quis quam. </p>
             </div>
-        </div>
+         </div>
 
-        <div id="sponsor-block" class="container my-5 py-5 bg-block">
-            <h2>Sponsor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex. Curabitur vitae laoreet mauris, at blandit urna.</p>
-            <button class="btn btn-md text-uppercase">Donate</button>
-        </div>
 
-        <div class="container my-5 py-5">
-            <div class="row align-items-center">
-                <div id="events-block" class="col-sm py-5 bg-block">
-                    <h2>Events</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna.</p>
-                    <p class="text-right">View all &nbsp; &gt;</p>
-                </div>
-                <div class="col-sm">
-                    <img src="./src/img/photo-1464660756002-dd9f9a92b01b.jpeg" class="img-fluid" alt="American flag with a backdrop of sunrays peaking through a cloudy sky">
-                </div>
-            </div>
-        </div>
+         <div class="form-container  bg-block" style="height:600px" >
+             <form class='pt-5' style='width:80%;margin:auto;'>
+                 <div class='form-group col-md-auto '>
+                    <input class='form-control'  placeholder="FIRST NAME *"/>
+                 </div>
+                 <div class='col-md-auto form-group '>
+                    <input class='form-control' placeholder="LAST NAME *" />
+                 </div>
+                 <div class='col-md-auto form-group' >
+                    <input class='form-control' placeholder="COMPANY *"/>
+                 </div>
+                 <div class='col-md-auto form-group'>
+                    <input class='form-control' placeholder="EMAIL *"/>
+                 </div>
+                 <div class='col-md-auto form-group'>
+                    <input class='form-control' placeholder="TELEPHONE *"/>
+                 </div>
+                 <div class="col-md-auto ">
+                     <input type='checkbox' />
+                     <label>YES, THIS IS ABOUT A SPONSORSHIP.</label>
+                 </div>
+                 <div class="col-md-auto">
+                    <input  type="checkbox"/>
+                    <label>YES, THIS IS ABOUT VOLUNTEERING</label>
+                 </div>
+                 <div class="col-md-auto form-group">
+                    <textarea class='form-control' style="height:100px" placeholder="MESSAGE *"></textarea>
+                 </div>
+                 <div class="col col-md-auto">
+                     <button class="btn btn-outline-secondary">submit</button>
+                     <button class="btn btn-outline-secondary">cancel</button>
+                 </div>
+             </form>
+         </div>
 
-        <div class="container my-5 py-5">
+         <div class='row mt-5'>
+             <div class="col pt-4">
+                 <p>Company Name</p>
+                 <p>4321 Street Name Ave</p>
+                 <p>City Name, State 98765</p>
+                 <p>(555)555-5555</p>
+                <p>sayhello@domainname.com</p>
+             </div>
+             <div class="col">
+                 <img class="w-100 h-100" src="./src/img/photo-1464660756002-dd9f9a92b01b.jpeg"/>
+             </div>
+         </div>
+
+         <div class="container my-5 py-5">
             <p>Vet to Vet &reg; is an independent non-profit organization 501c3 founded by Vets and made up of Veterans and Civilians to help Veterans. Vet to Vet &reg; is not affiliated or associated with the "operation of Vet2Vet" located at 24 Homewood Ave, North Providence, RI.</p>
         </div>
       </main>
+    </main>
 
+   
+  
+
+       
     <section class="my-5">
         <div class="container py-5 text-center">
             <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
