index.html content update

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <div class="row align-items-center">
                 <div id="participate-block" class="col-sm py-5 bg-block">
                     <h2>Ways to participate</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex.</p>
+                    <p>Get involved by particpating at one of our many events or activities for Veterans, volunteer, or donate. </p>
                 </div>
                 <div id="volunteer-block" class="col-sm py-5">
                     <h2>Volunteer</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna.</p>
+                    <p>There are various opportunities to volunteer in the hospitals we serve or through one of our events.</p>
                     <p class="text-right">Learn more &nbsp; &gt;</p>
                 </div>
             </div>
@@ -64,7 +64,7 @@
 
         <div id="sponsor-block" class="container my-5 py-5 bg-block">
             <h2>Sponsor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex. Curabitur vitae laoreet mauris, at blandit urna.</p>
+            <p>Show your support by donating through Mobile Giving or contact us for other ways to sponsor.</p>
             <button class="btn btn-md text-uppercase">Donate</button>
         </div>
 
@@ -72,7 +72,7 @@
             <div class="row align-items-center">
                 <div id="events-block" class="col-sm py-5 bg-block">
                     <h2>Events</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae laoreet mauris, at blandit urna.</p>
+                    <p>We organize a variety of events in which you can volunteer or participate in. Contact us for more details.</p>
                     <p class="text-right">View all &nbsp; &gt;</p>
                 </div>
                 <div class="col-sm">
@@ -88,7 +88,7 @@
 
     <section class="my-5">
         <div class="container py-5 text-center">
-            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+            <h4>Show your support by donating today!</h4>
             <button class="btn btn-md text-uppercase">Donate</button>
         </div>
     </section>
@@ -98,10 +98,9 @@
             <div class="row align-items-center">
                 <div class="col">
                     <p>&copy; 2020 Vet to Vet &reg;. All rights reserved.</p>
-                    <p>Website by Community Building Coders.</p>
                 </div>
                 <div class="col text-right">
-                    <span>SOCIAL MEDIA ICONS</span>
+                    <p>Website by Community Building Coders</p>
                 </div>
             </div>
         </div>
