Added how to help page

--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase">
-        <a class="navbar-brand" href="#">Vet to Vet</a>
+        <a class="navbar-brand" href="./index.html">Vet to Vet</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li> -->
                 <li class="nav-item">
-                <a class="nav-link" href="#">How to Help</a>
+                <a class="nav-link" href="./howToHelp.html">How to Help</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">Events</a>
@@ -81,7 +81,7 @@
                  <div class="col-md-auto form-group">
                     <textarea class='form-control' style="height:100px" placeholder="MESSAGE *"></textarea>
                  </div>
-                 <div class="col col-md-auto">
+                 <div class="col ">
                      <button class="btn btn-outline-secondary">submit</button>
                      <button class="btn btn-outline-secondary">cancel</button>
                  </div>
