Added Events page, waiting on event calendar response, Added Contact form functionality

--- a/events.html
+++ b/events.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase">
-        <a class="navbar-brand" href="#">Vet to Vet</a>
+        <a class="navbar-brand" href="./index.html">Vet to Vet</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="form.html">Contact</a>
+                    <a class="nav-link" href="./form.html">Contact</a>
                 </li>
             </ul>
         </div>
@@ -42,53 +42,33 @@
         </div>
     </div>
 
-    <main class="mx-auto">
-        <div id="mission-statement" class="container mt-5 py-5">
-            <h1>Helping Veterans since 1994.</h1>
-            <p>We are a non-profit organization assisting disabled and homeless veterans in transitional care at VA hospitals and providing veteran support initiatives by building and managing practical life-skills.</p>
-        </div>
-
-        <div class="container mb-5 py-5">
-            <div class="row align-items-center">
-                <div id="participate-block" class="col-sm py-5 bg-block">
-                    <h2>Ways to participate</h2>
-                    <p>Get involved by particpating at one of our many events or activities for Veterans, volunteer, or donate. </p>
-                </div>
-                <div id="volunteer-block" class="col-sm py-5">
-                    <h2>Volunteer</h2>
-                    <p>There are various opportunities to volunteer in the hospitals we serve or through one of our events.</p>
-                    <p class="text-right">Learn more &nbsp; &gt;</p>
-                </div>
+    <main class='mx-auto'>
+        <div class="signup-sponsor-block">
+            <div class="container mt-5 py-5">
+                <h2 >Join us at one of our bingo games, barbeques,
+and holiday events.</br></h2>
+                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
+                    laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex. Sed
+                    faucibus leo nec posuere vestibulum. Aenean eu tortor quis quam. </p>
             </div>
-        </div>
+         </div>
 
-        <div id="sponsor-block" class="container my-5 py-5 bg-block">
-            <h2>Sponsor</h2>
-            <p>Show your support by donating through Mobile Giving or contact us for other ways to sponsor.</p>
-            <button class="btn btn-md text-uppercase">Donate</button>
-        </div>
 
-        <div class="container my-5 py-5">
-            <div class="row align-items-center">
-                <div id="events-block" class="col-sm py-5 bg-block">
-                    <h2>Events</h2>
-                    <p>We organize a variety of events in which you can volunteer or participate in. Contact us for more details.</p>
-                    <p class="text-right">View all &nbsp; &gt;</p>
-                </div>
-                <div class="col-sm">
-                    <img src="./src/img/photo-1464660756002-dd9f9a92b01b.jpeg" class="img-fluid" alt="American flag with a backdrop of sunrays peaking through a cloudy sky">
-                </div>
-            </div>
-        </div>
+         
 
-        <div class="container my-5 py-5">
+         <div class="container my-5 py-5">
             <p>Vet to Vet &reg; is an independent non-profit organization 501c3 founded by Vets and made up of Veterans and Civilians to help Veterans. Vet to Vet &reg; is not affiliated or associated with the "operation of Vet2Vet" located at 24 Homewood Ave, North Providence, RI.</p>
         </div>
       </main>
+  
 
+   
+  
+
+       
     <section class="my-5">
         <div class="container py-5 text-center">
-            <h4>Show your support by donating today!</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
             <button class="btn btn-md text-uppercase">Donate</button>
         </div>
     </section>
@@ -98,9 +78,10 @@
             <div class="row align-items-center">
                 <div class="col">
                     <p>&copy; 2020 Vet to Vet &reg;. All rights reserved.</p>
+                    <p>Website by Community Building Coders.</p>
                 </div>
                 <div class="col text-right">
-                    <p>Website by Community Building Coders</p>
+                    <span>SOCIAL MEDIA ICONS</span>
                 </div>
             </div>
         </div>
