--- a/aboutus.html
+++ b/aboutus.html
@@ -20,10 +20,10 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li> -->
                 <li class="nav-item">
-                <a class="nav-link" href="#">How to Help</a>
+                <a class="nav-link" href="./howToHelp.html">How to Help</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
+                <a class="nav-link" href="./events.html">Events</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./aboutus.html">About Us</a>
