--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="./events.html">Events</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="./aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./form.html">Contact</a>
