--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="./aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="./form.html">Contact</a>
                 </li>
             </ul>
         </div>
