--- a/howToHelp.html
+++ b/howToHelp.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="./events.html">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="./aboutus.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="form.html">Contact</a>
@@ -85,7 +85,7 @@
           <div class="col-sm d-flex">
             <div class="m-auto justify-content-start" style="width: 90%">
               <h3 class="mx-3">Volunteers</h3>
-              <ul class="p-0 mx-3">
+              <ul class="p-0 mx-3 vol-list">
                 <li>Lorem ipsum dolor sit amet</li>
                 <li>Consectetur adipiscing elit</li>
                 <li>Curabitur vitae laoreet</li>
