--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="./src/style.css">
-  <title>Vet to Vet</title>
+  <title>Vet to Vet | About Us</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase">
-        <a class="navbar-brand" href="#">Vet to Vet <span class="sr-only">(current page)</span></a>
+        <a class="navbar-brand" href="./index.html">Vet to Vet</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" 
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,13 +19,13 @@
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item mr-lg-4">
-                    <a class="nav-link" href="./volunteer.html">How to Help</a>
+                <a class="nav-link" href="./volunteer.html">How to Help</a>
                 </li>
                 <li class="nav-item mr-lg-4">
-                    <a class="nav-link" href="./events.html">Events</a>
+                <a class="nav-link" href="./events.html">Events</a>
                 </li>
                 <li class="nav-item mr-lg-4">
-                    <a class="nav-link" href="./about.html">About Us</a>
+                <a class="nav-link active" href="./about.html">About Us <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mr-lg-4">
                     <a class="nav-link" href="./contact.html">Contact</a>
@@ -34,68 +34,75 @@
         </div>
     </nav>
 
-    <header id="jumbo-xl" class="jumbotron jumbotron-fluid row mx-0 bg-block mb-5">
-        <div id="jumbo-text" class="container-fluid align-self-end text-center py-4">
-            <h1 class="display-4 mb-0">Vet to Vet &reg;</h1>
-            <h3>Veteran Support Organization</h3>
-        </div>
-    </header>
+    <header class="jumbotron jumbotron-fluid bg-block mb-5" aria-hidden="true"></header>
 
     <main class="mx-auto">
         <div id="mission-statement" class="container mb-5 p-5 px-md-0">
-            <h1>Helping Veterans since 1994.</h1>
+            <h1>Veteran to Veteran</h1>
             <p>
-                We are a non-profit organization assisting disabled and homeless veterans in transitional care at VA hospitals 
-                and providing veteran support initiatives by building and managing practical life-skills.
+                Vet to Vet &reg; was founded in 1994. Just before Christmas of that year, Jess and Peggy Johnson reached out to local 
+                disabled veterans to distribute hamburgers and coffee thermoses to 24 patients at the Dallas VA Hospital.
+            </p>
+            <p>
+                This generosity was warly received by the Veterans and the effort a great success. The Johnson's soon realized they lacked 
+                additional supplies to provide gifts to each of the hundreds of patients they discovered were housed in transitional car 
+                unit. With this, they returned the next day with gifts and support for all of them! In the years since, they have expanded 
+                their operation to include Bonham, Waco, Temple, and Dallas VA hospitals.
+            </p>
+        </div>
+
+        <div class="container mb-5 p-5 bg-block">
+            <h2>We do it because we care.</h2>
+            <p>
+                Vet to Vet &reg; now provides 4,000 gifts to over 1,600 patients each Holiday Season, as well as hosting events, 
+                bingo games and barbecues throughout the year.
+            </p>
+            <p>
+                Vet to Vet &reg; hosts fundraisers that support Texas VA hospitals and plan to open Chapters in all 162 VA 
+                hospitals across the country.
+            </p>
+            <p>
+                Additionally, the organization plans to build homes on land near VA hospitals that will accommodate veterans 
+                and their families free of charge during their rehabilitation.
             </p>
         </div>
 
         <div class="container mb-5 py-5">
             <div class="row align-items-stretch">
-                <div id="participate-block" class="col-md p-5 mb-5 mb-md-0 bg-block">
-                    <h2>Ways to participate</h2>
+                <div class="col-md p-5 mb-5 mb-md-0">
+                    <h2>PTSD Support Therapy</h2>
                     <p>
-                        Get involved by particpating at one of our many events or activities for Veterans, volunteer, or donate. 
+                        Vet to Vet &reg; has committed to the education of out US Combat Veterans and their Friends and Family about 
+                        the benefits of "Essential Oils" utilized in therapy. Visit <a href="#">The Command (website no longer 
+                        available)</a> for more information.
                     </p>
                 </div>
-                <div id="volunteer-block" class="col-md p-5">
-                    <h2>Volunteer</h2>
-                    <p class="mb-4">
-                        There are various opportunities to volunteer in the hospitals we serve or through one of our events.
-                    </p>
-                    <p class="small text-uppercase text-right">
-                        <a href="./volunteer.html">Learn more &nbsp; &gt;</a>
+                <div class="col-md p-5 bg-block">
+                    <h2>Project Phoenix Ranch</h2>
+                    <p>
+                        Vet to Vet &reg; is committed to supporting transition and training of US Combat Veterans as they leave the 
+                        "war theater" and wish to enter the private sector. Phoenix Ranch is being planned as a base to train veterans 
+                        in practical agricultural business (including farming and ranching).
                     </p>
                 </div>
             </div>
         </div>
 
-        <div id="sponsor-block" class="container my-5 p-5 bg-block">
-            <h2>Sponsor</h2>
-            <p>
-                Show your support by donating through Mobile Giving or contact us for other ways to sponsor. Your contribution directly 
-                impacts the lives of disabled and unhoused veterans.
-            </p>
-            <div class="text-right">
-                <button class="btn btn-md small text-uppercase px-5">Donate</button>
-            </div>
-        </div>
+
 
         <div class="container my-5 py-5">
             <div class="row align-items-stretch">
-                <div id="events-block" class="col-md p-5 mb-5 mb-md-0 bg-block">
-                    <h2>Events</h2>
-                    <p class="mb-4">
-                        We organize a variety of events in which you can volunteer or participate. Contact us for more details.
-                    </p>
-                    <p class="small text-uppercase text-right">
-                        <a href="./events.html">View all &nbsp; &gt;</a>
-                    </p>
-                </div>
                 <div class="col-md">
-                    <img src="./src/img/photo-1464660756002-dd9f9a92b01b.jpeg" class="w-100 h-100" 
-                        alt="American flag with a backdrop of sunrays peaking through a cloudy sky">
+                    <img src="./src/img/founder.jpg" class="w-100 h-100" alt="American flag with a backdrop of sunrays peaking through a cloudy sky">
                 </div>
+                <div id="events-block" class="col-md bg-block p-5 mt-5 mt-md-0">
+                    <h2>Meet the Founder</h2>
+                    <p>
+                        James W. "Jess" Johnson served as a US Army combat medic in the Vietnam War and as a US Army Reserve weapons 
+                        specialist and instructor at the JFK Special Warfare Center before retiring in 1999.
+                    </p>
+                </div>
+                
             </div>
         </div>
 
